add battery bar (2/2)
Change-Id: I912449bf44386a19f1f174eb732c7d077805b4de

--- a/res/values/cm_arrays.xml
+++ b/res/values/cm_arrays.xml
@@ -380,6 +380,7 @@
         <item>@string/status_bar_battery_status_percentage</item>
         <item>@string/status_bar_battery_status_circle</item>
         <item>@string/status_bar_battery_status_circle_percentage</item>
+        <item>@string/status_bar_battery_status_statusbar</item>
         <item>@string/status_bar_style_hidden</item>
     </string-array>
 
@@ -388,6 +389,7 @@
         <item>1</item>
         <item>2</item>
         <item>3</item>
+        <item>5</item>
         <item>4</item>
     </string-array>
 
