add forum link to device info
Change-Id: I0f20b34b8f98673d9fc15dd2687b02c0dd296409

--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -183,4 +183,9 @@
                 android:title="@string/selinux_status"
                 android:summary="@string/selinux_status_enforcing"/>
 
+        <!-- Konsta forum link -->
+        <Preference android:key="konsta_web"
+                android:title="@string/konsta_web_title"
+                android:summary="@string/konsta_web_summary"/>
+
 </PreferenceScreen>
