--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -22,6 +22,11 @@
     <string name="partition_info_sdcard">/sdcard (FAT)</string>
     <string name="partition_info_sdext">EXT partition</string>
 
+    <!-- Konsta forum link -->
+    <string name="konsta_web_title">CyanogenMod10.2-KonstaKANG</string>
+    <string name="konsta_web_summary">Visit MoDaCo thread</string>
+    <string name="konsta_web_url">http://www.modaco.com/topic/364042-devrom58-cyanogenmod-102-android-43/</string>
+
     <!-- Activity label of BluetoothMasPermissionActivity, also used as Strings in the permission dialog [CHAR LIMIT=none] -->
     <string name="bluetooth_mas_request">"Message Access request"</string>
     <!-- Bluetooth MAS permission Alert Activity text [CHAR LIMIT=none] -->
