--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -27,6 +27,10 @@
     <string name="konsta_web_summary">Visit MoDaCo thread</string>
     <string name="konsta_web_url">http://www.modaco.com/topic/364042-devrom58-cyanogenmod-102-android-43/</string>
 
+    <!-- Performance : Disable bootanimation -->
+    <string name="pref_disable_bootanimation_title">Disable boot animation</string>
+    <string name="pref_disable_bootanimation_summary">Don\'t show boot animation for faster boot</string>
+
     <!-- Activity label of BluetoothMasPermissionActivity, also used as Strings in the permission dialog [CHAR LIMIT=none] -->
     <string name="bluetooth_mas_request">"Message Access request"</string>
     <!-- Bluetooth MAS permission Alert Activity text [CHAR LIMIT=none] -->
