--- a/res/xml/performance_settings.xml
+++ b/res/xml/performance_settings.xml
@@ -42,4 +42,9 @@
         android:title="@string/pref_use_16bpp_alpha_title"
         android:summary="@string/pref_use_16bpp_alpha_summary" />
 
+    <CheckBoxPreference
+        android:key="pref_disable_bootanimation"
+        android:title="@string/pref_disable_bootanimation_title"
+        android:summary="@string/pref_disable_bootanimation_summary" />
+
 </PreferenceScreen>
